# EFMM-3DO-Windows

./: CMakeLists.txt  Makefile  PORTING_EXAMPLE.c  PORTING_PLAN.md  PORT_STATUS_REPORT.md  analyze_3do.c  castle.h  cinepak_decode.c  cinepak_decode.h  ctst_ported.c  demux_3do.cpp  game_stubs.c  objects.h  option.h  src.c  threedo_compat.h  video_test.c  video_test_broken.c  video_test_fixed.c
celviewer/: CelLib.cpp  CelLib.h  Project1.bpr  SCelFileFormat.h  SCelSubscriber.h  StreamLib.h  USSR_std.h  Unit1.cpp  Unit1.dfm  Unit1.h  WaveBox.h  cinepak_decode.cpp  cinepak_decode.h  hack.cpp  hack.h  std_primitives.h
cmake/: FindSDL2.cmake  FindSDL2_mixer.cmake
platform/: platform_audio.h  platform_graphics.h  platform_input.h  platform_types.h
platform/sdl/: audio_sdl.c  graphics_sdl.c  input_sdl.c  main_sdl.c
platform/stub/: audio_stub.c  graphics_stub.c  input_stub.c  main_stub.c
